Update: US English, USD pricing, add Roomio images

--- a/captur3d-marketplace.html
+++ b/captur3d-marketplace.html
@@ -138,7 +138,7 @@
                                 
                                 <p>For over 10 years, CAPTUR3D has been the go-to platform for Matterport Service Providers who demand more from their digital twins. As a Matterport Development Partner and Service Partner, we've built the most comprehensive suite of tools to extend the value of every scan you capture.</p>
 
-                                <p>Get professional floor plans delivered in 12-24 hours at the industry's most competitive prices. With the widest range of customizable templates available, you can deliver exactly what your clients need—whether it's 2D schematic plans, immersive 3D floor plans, or detailed site plans—all at a fixed, transparent price of just 16 credits (approximately USD$16).</p>
+                                <p>Get professional floor plans delivered in 12-24 hours at the industry's most competitive prices. With the widest range of customizable templates available, you can deliver exactly what your clients need—whether it's 2D schematic plans, immersive 3D floor plans, or detailed site plans—all at a fixed, transparent price of just 16 credits (approximately $16 USD).</p>
 
                                 <p>But CAPTUR3D is more than floor plans. Our industry-first Creator Studio lets you customize virtual tours with virtual staging (750,000+ 3D assets), media embeds, custom overlays, immersive audio, and even augmented reality wayfinding through ARConnect. Turn every Matterport scan into a premium deliverable that commands higher prices and wins more clients.</p>
 
